--- a/person.html
+++ b/person.html
@@ -104,42 +104,58 @@
       </div>
 
       <div class="navbar-bottom">
-        <div class="icons-container-create active">
-          <span
-            class="material-symbols-outlined create-icon btn-default"
-            data-color="blue"
-            title="כרטיס"
-          >
-            person
-          </span>
-          <span
-            class="material-symbols-outlined create-icon btn-default"
-            data-color="green"
-            title="מכירות"
-          >
-            attach_money
-          </span>
-          <span
-            class="material-symbols-outlined create-icon btn-default"
-            data-color="purple"
-            title="תיעוד"
-          >
-            move_to_inbox
-          </span>
-          <span
-            class="material-symbols-outlined create-icon btn-default"
-            data-color="red"
-            title="לוגיסטיקה"
-          >
-            electric_rickshaw
-          </span>
-          <span
-            class="material-symbols-outlined create-icon btn-default"
-            data-color="yellow"
-            title="תכנון לעתיד"
-          >
-            task_alt
-          </span>
+        <div class="icons-container-create">
+          <div class="create-category">
+            <span class="material-symbols-outlined create-icon" title="שכיח">
+              app_shortcut
+            </span>
+            <span>שכיח</span>
+          </div>
+
+          <div class="create-category" data-color="blue">
+            <span class="material-symbols-outlined create-icon" title="כרטיס">
+              category
+            </span>
+            <span>כרטיס</span>
+          </div>
+
+          <div class="create-category">
+            <span class="material-symbols-outlined create-icon" title="כתוב">
+              drafts
+            </span>
+            <span>כתוב</span>
+          </div>
+
+          <div class="create-category" data-color="yellow">
+            <span class="material-symbols-outlined create-icon" title="לטיפול">
+              calendar_clock
+            </span>
+            <span>לטיפול</span>
+          </div>
+
+          <div class="create-category" data-color="purple">
+            <span class="material-symbols-outlined create-icon" title="תיעוד">
+              archive
+            </span>
+            <span>תיעוד</span>
+          </div>
+
+          <div class="create-category" data-color="green">
+            <span class="material-symbols-outlined create-icon" title="מכירות">
+              attach_money
+            </span>
+            <span>מכירות</span>
+          </div>
+
+          <div class="create-category" data-color="red">
+            <span
+              class="material-symbols-outlined create-icon"
+              title="לוגיסטיקה"
+            >
+              electric_rickshaw
+            </span>
+            <span>לוגיסטיקה</span>
+          </div>
         </div>
         <div class="group-container-create active" data-color="purple">
           <div class="group purple">
@@ -384,7 +400,24 @@
           </div>
         </div>
         <div class="group-container-create active" data-color="blue">
-          <div class="group blue">
+          <div class="group-blue">
+            <div class="card__boxes--box__content--fields">
+              <span>ליד</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>איש</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>ארגון</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>שיחה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>משימה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>פגישה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>הצעת מחיר</span>
+            </div>
+          </div>
+          <!-- <div class="group blue">
             <div class="group-name">
               <div>
                 <span>כרטיס</span>
@@ -440,8 +473,8 @@
                 </span>
               </span>
             </div>
-          </div>
-          <div class="group blue">
+          </div> -->
+          <!-- <div class="group blue">
             <div class="group-name">
               <div>
                 <span>שלח</span>
@@ -465,7 +498,7 @@
                 </span>
               </span>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="group-container-create active" data-color="red">
           <div class="group">
