--- a/person.html
+++ b/person.html
@@ -105,7 +105,7 @@
 
       <div class="navbar-bottom">
         <div class="icons-container-create">
-          <div class="create-category">
+          <div class="create-category" data-color="gray">
             <span class="material-symbols-outlined create-icon" title="שכיח">
               app_shortcut
             </span>
@@ -157,14 +157,27 @@
             <span>לוגיסטיקה</span>
           </div>
         </div>
+        <div class="group-container-create active" data-color="gray">
+          <div class="group-blue">
+            <div class="group-fields">
+              <span>ליד</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>איש</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>ארגון</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>שיחה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>משימה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>פגישה</span>
+              <span class="material-symbols-outlined stop-icon"> stop </span>
+              <span>הצעת מחיר</span>
+            </div>
+          </div>
+        </div>
         <div class="group-container-create active" data-color="purple">
           <div class="group purple">
-            <div class="group-name">
-              <div>
-                <span>תיעוד</span>
-              </div>
-            </div>
-
             <div class="group-fields">
               <span class="edit-content medium">
                 <span class="edit-field">
@@ -400,24 +413,7 @@
           </div>
         </div>
         <div class="group-container-create active" data-color="blue">
-          <div class="group-blue">
-            <div class="card__boxes--box__content--fields">
-              <span>ליד</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>איש</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>ארגון</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>שיחה</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>משימה</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>פגישה</span>
-              <span class="material-symbols-outlined stop-icon"> stop </span>
-              <span>הצעת מחיר</span>
-            </div>
-          </div>
-          <!-- <div class="group blue">
+          <div class="group blue">
             <div class="group-name">
               <div>
                 <span>כרטיס</span>
@@ -473,8 +469,8 @@
                 </span>
               </span>
             </div>
-          </div> -->
-          <!-- <div class="group blue">
+          </div>
+          <div class="group blue">
             <div class="group-name">
               <div>
                 <span>שלח</span>
@@ -498,16 +494,10 @@
                 </span>
               </span>
             </div>
-          </div> -->
+          </div>
         </div>
         <div class="group-container-create active" data-color="red">
           <div class="group">
-            <div class="group-name">
-              <div>
-                <span>לוגיסטיקה</span>
-              </div>
-            </div>
-
             <div class="group-fields">
               <span class="edit-content medium">
                 <span class="edit-field">
@@ -546,11 +536,6 @@
         </div>
         <div class="group-container-create active" data-color="yellow">
           <div class="group purple">
-            <div class="group-name">
-              <div>
-                <span>תכנון לעתיד</span>
-              </div>
-            </div>
             <div class="group-fields">
               <span class="edit-content medium">
                 <span class="edit-field">
