--- a/person.html
+++ b/person.html
@@ -45,14 +45,10 @@
                 <input
                   type="text"
                   class="input"
-                  placeholder="חיפוש..."
+                  placeholder="חפש..."
                   id="searchInput"
                 />
                 <div class="navbar__main--search__links-container">
-                  <!-- <div class="round-btn round-btn-primary">
-                    <span class="material-symbols-outlined"> search </span>
-                  </div> -->
-
                   <div class="label-container active">
                     <label
                       class="label-text"
@@ -74,9 +70,10 @@
               </div>
             </div>
           </div>
+
           <div class="navbar__create">
             <div class="create-title">
-              <div>צור</div>
+              <div>צור...</div>
             </div>
             <!--  -->
             <div class="round-btn round-btn-primary green" id="create-btn">
@@ -85,7 +82,7 @@
           </div>
           <div class="navbar__create">
             <div class="create-title">
-              <div>הצג</div>
+              <div>הצג...</div>
             </div>
             <div class="round-btn round-btn-primary purple" id="skyz-btn">
               <span class="material-symbols-outlined"> category </span>
