--- a/person.html
+++ b/person.html
@@ -26,7 +26,7 @@
       <div class="navbar-top">
         <div class="navbar__menu">
           <span
-            class="material-symbols-outlined navbar__menu--side-toggle"
+            class="material-symbols-outlined navbar__menu--side-toggle active"
             id="sideNavBtn"
           >
             menu
@@ -584,7 +584,7 @@
     <div class="navbar__overlay"></div>
 
     <!---*-*-*-*-*-*-*-*--*-*-*- Sidebar Section --*-*-*-*-*-*-*-*-*-*-*-->
-    <aside class="side-nav" dir="rtl">
+    <aside class="side-nav active" dir="rtl">
       <div class="side-nav__content">
         <ul class="side-nav__content--list">
           <!-- <li class="side-nav__content--list__item create-item">
