--- a/person.html
+++ b/person.html
@@ -70,22 +70,36 @@
               </div>
             </div>
           </div>
-
-          <div class="navbar__create">
-            <div class="create-title">
-              <div>צור...</div>
-            </div>
-            <!--  -->
-            <div class="round-btn round-btn-primary green" id="create-btn">
-              <span class="material-symbols-outlined"> add_circle </span>
+          <div class="navbar__main--create">
+            <div class="field-container">
+              <div class="input-container">
+                <input
+                  type="text"
+                  class="input"
+                  placeholder="צור..."
+                  id="searchInput"
+                />
+                <div class="navbar__main--search__links-container">
+                  <div
+                    class="round-btn round-btn-primary green"
+                    id="create-btn"
+                  >
+                    <span class="material-symbols-outlined"> add_circle </span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="navbar__create">
-            <div class="create-title">
-              <div>הצג...</div>
-            </div>
-            <div class="round-btn round-btn-primary purple" id="skyz-btn">
-              <span class="material-symbols-outlined"> category </span>
+          <div class="navbar__main--create">
+            <div class="field-container">
+              <div class="input-container">
+                <input type="text" class="input" placeholder="הצג..." />
+                <div class="navbar__main--search__links-container">
+                  <div class="round-btn round-btn-primary purple" id="skyz-btn">
+                    <span class="material-symbols-outlined"> category </span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
