--- a/person.html
+++ b/person.html
@@ -593,6 +593,101 @@
           </div>
         </div>
       </div>
+      <div class="navbar-bottom skyz active">
+        <div class="full-menu">
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>מועדפים</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>דף הבית</li>
+              <li>אנשים</li>
+              <li>ארגונים</li>
+              <li>המשימות שלי</li>
+              <li>מיילים שלי</li>
+              <li>קריאות</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>כרטסות</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>לידים</li>
+              <li>אנשים</li>
+              <li>ארגונים</li>
+              <li>משאבים</li>
+              <li>תקשורת</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>פעולות</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>משימות</li>
+              <li>שיחות</li>
+              <li>פגישות</li>
+              <li>קריאות</li>
+              <li>הזדמנויות</li>
+              <li>הערות</li>
+              <li>דיווחי שעות</li>
+              <li>קבצים</li>
+              <li>מיילים</li>
+              <li>פתרונות</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>קדם מכירות</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>הזדמנויות</li>
+              <li>הצעות מחיר</li>
+              <li>הזמנות</li>
+              <li>קמפיינים</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>חשבוניות/קבלות</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>חשבוניות עסקה</li>
+              <li>חשבוניות מס</li>
+              <li>חשבנויות מס/קבלה</li>
+              <li>קבלות</li>
+              <li>הפקדות בנק</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>זיכויים</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>חשבונית מס זיכוי</li>
+              <li>חשבונית עסקה זיכוי</li>
+              <li>קבלה זיכוי</li>
+            </ul>
+          </div>
+          <div class="full-menu__box">
+            <div class="full-menu__box--title">
+              <span class="material-symbols-outlined"> category </span>
+              <span>הוראות</span>
+            </div>
+            <ul class="full-menu__box--list">
+              <li>הוראות חיוב</li>
+              <li>הוראות זיכוי</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="navbar__overlay"></div>
