--- a/person.html
+++ b/person.html
@@ -25,8 +25,8 @@
     <div class="navbar">
       <div class="navbar-top">
         <div class="navbar__menu">
-          <span
-            class="material-symbols-outlined navbar__menu--side-toggle active"
+          <!-- <span
+            class="material-symbols-outlined navbar__menu--side-toggle"
             id="sideNavBtn"
           >
             menu
@@ -36,9 +36,35 @@
               home</span
             >
             <div class="navbar__main--logo__name">Skyz<span>CRM</span></div>
-          </div>
+          </div> -->
         </div>
         <div class="navbar__main">
+          <div class="navbar__main--menu">
+            <div class="field-container">
+              <div class="input-container">
+                <div class="navbar__main--search__links-container">
+                  <div
+                    class="round-btn round-btn-primary white"
+                    id="sideNavBtn"
+                  >
+                    <span class="material-symbols-outlined"> menu </span>
+                  </div>
+                </div>
+                <div class="skyz-name">SKYZ</div>
+              </div>
+            </div>
+          </div>
+          <div class="navbar__main--home">
+            <div class="field-container">
+              <div class="input-container">
+                <div class="navbar__main--search__links-container">
+                  <div class="round-btn round-btn-primary yellow">
+                    <span class="material-symbols-outlined"> dashboard </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="navbar__main--search">
             <div class="field-container">
               <div class="input-container">
