--- a/person.html
+++ b/person.html
@@ -72,7 +72,7 @@
                 <div class="input-container">
                   <input
                     type="text"
-                    class="input"
+                    class="navbar-input"
                     placeholder="חפש..."
                     id="searchInput"
                   />
@@ -103,7 +103,7 @@
                 <div class="input-container">
                   <input
                     type="text"
-                    class="input"
+                    class="navbar-input"
                     placeholder="צור..."
                     id="searchInput"
                   />
@@ -123,7 +123,11 @@
             <div class="navbar__main--create">
               <div class="field-container">
                 <div class="input-container">
-                  <input type="text" class="input" placeholder="הצג..." />
+                  <input
+                    type="text"
+                    class="navbar-input"
+                    placeholder="הצג..."
+                  />
                   <div class="navbar__main--search__links-container">
                     <div
                       class="round-btn round-btn-primary purple"
