--- a/person.html
+++ b/person.html
@@ -731,21 +731,9 @@
     <div class="navbar__overlay"></div>
 
     <!---*-*-*-*-*-*-*-*--*-*-*- Sidebar Section --*-*-*-*-*-*-*-*-*-*-*-->
-    <aside class="side-nav active" dir="rtl">
+    <!-- <aside class="side-nav active" dir="rtl">
       <div class="side-nav__content">
         <ul class="side-nav__content--list">
-          <!-- <li class="side-nav__content--list__item create-item">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined"> create </span>
-                <div>צור</div>
-              </a>
-              <span class="material-symbols-outlined btn-default">
-                person
-              </span>
-            </div>
-          </li> -->
-
           <li class="side-nav__content--list__item" id="homeBtn">
             <div class="item-name">
               <a href="#">
@@ -875,7 +863,7 @@
           </li>
         </ul>
       </div>
-    </aside>
+    </aside> -->
 
     <div class="main">
       <!---*-*-*-*-*-*-*-*--*-*-*- Search For Small Screen --*-*-*-*-*-*-*-*-*-*-*-->
