--- a/person.html
+++ b/person.html
@@ -153,10 +153,10 @@
               <span class="material-symbols-outlined"> dark_mode </span>
             </button>
           </div>
-          <div class="navbar__personal--name">Impact System</div>
-          <div class="round-img-container">
+          <!-- <div class="navbar__personal--name">Impact System</div> -->
+          <!-- <div class="round-img-container">
             <img src="./up/imgs/passport.webp" alt="" />
-          </div>
+          </div> -->
         </div>
       </div>
 
