--- a/person.html
+++ b/person.html
@@ -43,10 +43,10 @@
           <div class="navbar__main">
             <div class="navbar__main--menu">
               <div class="field-container">
-                <div class="input-container">
+                <div class="input-container yellow">
                   <div class="navbar__main--search__links-container">
                     <div
-                      class="round-btn round-btn-primary white"
+                      class="round-btn round-btn-primary yellow"
                       id="sideNavBtn"
                     >
                       <span class="material-symbols-outlined"> menu </span>
@@ -58,9 +58,9 @@
             </div>
             <div class="navbar__main--home">
               <div class="field-container">
-                <div class="input-container">
+                <div class="input-container purple">
                   <div class="navbar__main--search__links-container">
-                    <div class="round-btn round-btn-primary yellow">
+                    <div class="round-btn round-btn-primary purple">
                       <span class="material-symbols-outlined"> home </span>
                     </div>
                   </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="navbar__main--search">
               <div class="field-container">
-                <div class="input-container">
+                <div class="input-container blue">
                   <input
                     type="text"
                     class="navbar-input"
@@ -100,7 +100,7 @@
             </div>
             <div class="navbar__main--create">
               <div class="field-container">
-                <div class="input-container">
+                <div class="input-container green">
                   <input
                     type="text"
                     class="navbar-input"
@@ -610,7 +610,30 @@
           </div>
         </div>
       </div>
-      <div class="navbar-bottom skyz active">
+      <div class="navbar-bottom menu">
+        <div class="menu">
+          <div class="menu-item">
+            <span class="material-symbols-outlined"> settings </span>
+            <b>הגדרות:</b>
+            <span>שלי</span>
+            <span class="material-symbols-outlined stop-icon"> stop </span>
+            <span>ניהול המערכת</span>
+          </div>
+          <div class="menu-item">
+            <span class="material-symbols-outlined"> dark_mode </span>
+            <span>מצב כהה / dark mode</span>
+          </div>
+          <div class="menu-item">
+            <span class="material-symbols-outlined"> developer_board </span>
+            <span>מידע למפתחים</span>
+          </div>
+          <div class="menu-item">
+            <span class="material-symbols-outlined"> question_mark </span>
+            <span>הדרכה על המערכת</span>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="navbar-bottom skyz active">
         <div class="full-menu">
           <div class="full-menu__box">
             <div class="full-menu__box--title">
@@ -704,7 +727,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="navbar__overlay"></div>
